--- a/mission_to_mars.ipynb
+++ b/mission_to_mars.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,9 +12,389 @@
     "# scraping using Jupyter Notebook, # BeautifulSoup, Pandas, and Requests/Splinter.\n",
     "\n",
     "# Dependencies\n",
-    "from bs4 import BeautifulSoup as bs\n",
-    "import pymongo\n"
+    "from bs4 import BeautifulSoup\n",
+    "from splinter import Browser\n",
+    "import pandas as pd\n",
+    "import requests"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Choose the executable path to driver \n",
+    "executable_path = {'executable_path': 'chromedriver.exe'}\n",
+    "browser = Browser('chrome', **executable_path, headless=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Visit Nasa news url through splinter module\n",
+    "url = 'https://mars.nasa.gov/news/'\n",
+    "browser.visit(url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "news_title = Mars Scientists Investigate Ancient Life in Australia\n",
+      "\n",
+      "news_p = Teams with NASA's Mars 2020 and ESA's ExoMars practiced hunting for fossilized microbial life in the Australian Outback in preparation for their Red Planet missions. \n"
+     ]
+    }
+   ],
+   "source": [
+    "# HTML Object\n",
+    "html = browser.html\n",
+    "\n",
+    "# Parse HTML with Beautiful Soup\n",
+    "soup = BeautifulSoup(html, 'html.parser')\n",
+    "\n",
+    "\n",
+    "# Retrieve the latest element that contains news title and news_paragraph\n",
+    "news_title = soup.find('div', class_='content_title').find('a').text\n",
+    "news_p = soup.find('div', class_='article_teaser_body').text\n",
+    "\n",
+    "print(\"news_title = \" + news_title + \"\\n\") \n",
+    "print(\"news_p = \" + news_p)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### JPL Mars Space Images - Featured Image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Visit Mars Space Images through splinter module\n",
+    "Mars_Featured_Image_url = 'https://www.jpl.nasa.gov/spaceimages/?search=&category=Mars'\n",
+    "browser.visit(Mars_Featured_Image_url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'https://www.jpl.nasa.gov/spaceimages/images/wallpaper/PIA18848-1920x1200.jpg'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# HTML Object \n",
+    "html_image = browser.html\n",
+    "\n",
+    "# Parse HTML with Beautiful Soup\n",
+    "soup = BeautifulSoup(html_image, 'html.parser')\n",
+    "\n",
+    "# Retrieve background-image url from style tag \n",
+    "Mars_featured_image_url  = soup.find('article')['style'].replace('background-image: url(','').replace(');', '')[1:-1]\n",
+    "\n",
+    "# Website Url \n",
+    "base_url_website = 'https://www.jpl.nasa.gov'\n",
+    "\n",
+    "# Concatenate website url with scrapped route\n",
+    "Mars_featured_image_url = base_url_website + Mars_featured_image_url\n",
+    "\n",
+    "# Display full link to featured image\n",
+    "Mars_featured_image_url "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Mars Weather"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Visit Mars Weather Twitter through splinter module\n",
+    "Mars_weather_url = 'https://twitter.com/marswxreport?lang=en'\n",
+    "browser.visit(Mars_weather_url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "InSight sol 347 (2019-11-17) low -102.0ºC (-151.6ºF) high -23.7ºC (-10.7ºF)\n",
+      "winds from the SSE at 4.8 m/s (10.8 mph) gusting to 19.6 m/s (43.8 mph)\n",
+      "pressure at 6.80 hPapic.twitter.com/scrxCgTA81\n"
+     ]
+    }
+   ],
+   "source": [
+    "# HTML Object \n",
+    "Mars_weather_html = browser.html\n",
+    "\n",
+    "# Parse HTML with Beautiful Soup\n",
+    "soup = BeautifulSoup(Mars_weather_html, 'html.parser')\n",
+    "\n",
+    "# Find all elements that contain tweets\n",
+    "Mars_latest_tweets = soup.find_all('div', class_='js-tweet-text-container')\n",
+    "\n",
+    "# Retrieve all elements that contain news title in the specified range\n",
+    "# Look for entries that display weather related words to exclude non weather related tweets \n",
+    "for Mars_tweet in Mars_latest_tweets: \n",
+    "    Mars_weather_tweet = Mars_tweet.find('p').text\n",
+    "    if 'Sol' and 'pressure' in Mars_weather_tweet:\n",
+    "        print(Mars_weather_tweet)\n",
+    "        break\n",
+    "    else: \n",
+    "        pass"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Mars Facts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Value</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Description</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>Equatorial Diameter:</td>\n",
+       "      <td>6,792 km</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Polar Diameter:</td>\n",
+       "      <td>6,752 km</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Mass:</td>\n",
+       "      <td>6.39 × 10^23 kg (0.11 Earths)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Moons:</td>\n",
+       "      <td>2 (Phobos &amp; Deimos)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Orbit Distance:</td>\n",
+       "      <td>227,943,824 km (1.38 AU)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Orbit Period:</td>\n",
+       "      <td>687 days (1.9 years)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Surface Temperature:</td>\n",
+       "      <td>-87 to -5 °C</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>First Record:</td>\n",
+       "      <td>2nd millennium BC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Recorded By:</td>\n",
+       "      <td>Egyptian astronomers</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                              Value\n",
+       "Description                                        \n",
+       "Equatorial Diameter:                       6,792 km\n",
+       "Polar Diameter:                            6,752 km\n",
+       "Mass:                 6.39 × 10^23 kg (0.11 Earths)\n",
+       "Moons:                          2 (Phobos & Deimos)\n",
+       "Orbit Distance:            227,943,824 km (1.38 AU)\n",
+       "Orbit Period:                  687 days (1.9 years)\n",
+       "Surface Temperature:                   -87 to -5 °C\n",
+       "First Record:                     2nd millennium BC\n",
+       "Recorded By:                   Egyptian astronomers"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Visit Mars facts url \n",
+    "Mars_facts_url = 'http://space-facts.com/mars/'\n",
+    "\n",
+    "# Use Panda's `read_html` to parse the url\n",
+    "mars_facts_pd = pd.read_html(Mars_facts_url)\n",
+    "\n",
+    "# Find the mars facts DataFrame in the list of DataFrames as assign it to `mars_df`\n",
+    "mars_df = mars_facts_pd[0]\n",
+    "\n",
+    "# Assign the columns `['Description', 'Value']`\n",
+    "mars_df.columns = ['Description','Value']\n",
+    "\n",
+    "# Set the index to the `Description` column without row indexing\n",
+    "mars_df.set_index('Description', inplace=True)\n",
+    "\n",
+    "# Save html code to folder Assets\n",
+    "mars_df.to_html()\n",
+    "\n",
+    "data = mars_df.to_dict(orient='records')  # Here's our added param..\n",
+    "\n",
+    "# Display mars_df\n",
+    "mars_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Mars Hemispheres"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Visit hemispheres website through splinter module \n",
+    "Mars_hemispheres_url = 'https://astrogeology.usgs.gov/search/results?q=hemisphere+enhanced&k1=target&v1=Mars'\n",
+    "browser.visit(Mars_hemispheres_url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'title': 'Cerberus Hemisphere Enhanced',\n",
+       "  'img_url': 'https://astrogeology.usgs.gov/cache/images/cfa62af2557222a02478f1fcd781d445_cerberus_enhanced.tif_full.jpg'},\n",
+       " {'title': 'Schiaparelli Hemisphere Enhanced',\n",
+       "  'img_url': 'https://astrogeology.usgs.gov/cache/images/3cdd1cbf5e0813bba925c9030d13b62e_schiaparelli_enhanced.tif_full.jpg'},\n",
+       " {'title': 'Syrtis Major Hemisphere Enhanced',\n",
+       "  'img_url': 'https://astrogeology.usgs.gov/cache/images/ae209b4e408bb6c3e67b6af38168cf28_syrtis_major_enhanced.tif_full.jpg'},\n",
+       " {'title': 'Valles Marineris Hemisphere Enhanced',\n",
+       "  'img_url': 'https://astrogeology.usgs.gov/cache/images/7cf2da4bf549ed01c17f206327be4db7_valles_marineris_enhanced.tif_full.jpg'}]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# HTML Object\n",
+    "Mars_html_hemispheres = browser.html\n",
+    "\n",
+    "# Parse HTML with Beautiful Soup\n",
+    "soup = BeautifulSoup(Mars_html_hemispheres, 'html.parser')\n",
+    "\n",
+    "# Retreive all items that contain mars hemispheres information\n",
+    "items = soup.find_all('div', class_='item')\n",
+    "\n",
+    "# Create empty list for hemisphere urls \n",
+    "Mars_hemisphere_image_urls = []\n",
+    "\n",
+    "# Store the main_ul \n",
+    "Mars_hemispheres_main_url = 'https://astrogeology.usgs.gov'\n",
+    "\n",
+    "# Loop through the items previously stored\n",
+    "for i in items: \n",
+    "    # Store title\n",
+    "    title = i.find('h3').text\n",
+    "    \n",
+    "    # Store link that leads to full image website\n",
+    "    Mars_partial_img_url = i.find('a', class_='itemLink product-item')['href']\n",
+    "    \n",
+    "    # Visit the link that contains the full image website \n",
+    "    browser.visit(Mars_hemispheres_main_url + Mars_partial_img_url)\n",
+    "    \n",
+    "    # HTML Object of individual hemisphere information website \n",
+    "    Mars_partial_img_html = browser.html\n",
+    "    \n",
+    "    # Parse HTML with Beautiful Soup for every individual hemisphere information website \n",
+    "    soup = BeautifulSoup( Mars_partial_img_html, 'html.parser')\n",
+    "    \n",
+    "    # Retrieve full image source \n",
+    "    Mars_img_url = Mars_hemispheres_main_url + soup.find('img', class_='wide-image')['src']\n",
+    "    \n",
+    "    # Append the retreived information into a list of dictionaries \n",
+    "    Mars_hemisphere_image_urls.append({\"title\" : title, \"img_url\" : Mars_img_url})\n",
+    "    \n",
+    "\n",
+    "# Display hemisphere_image_urls\n",
+    "Mars_hemisphere_image_urls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
